--- a/src/components/Stopwatch/Stopwatch.module.scss
+++ b/src/components/Stopwatch/Stopwatch.module.scss
@@ -23,7 +23,7 @@
   }
   .clockbtn{
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
   }
